GitVersion1/objects/uf__Adoption_Config__c.object
<CustomObject>
    <fields>
        <fullName>uf__Config_Instructions__c</fullName>
        <formula>HYPERLINK(&quot;https://docs.google.com/document/d/1T8YPTj5MELV9tsTq4ns6G0LZLdwYzyz8d30Qdwa4nCo/edit?hl=en_US&amp;authkey=CMWZltIP&quot;, &quot;Click here for configuration instructions&quot;)</formula>
        <label>Config Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uf__Cost_per_Salesforce_License__c</fullName>
        <inlineHelpText>Enter the amount that your organization pays per license to assist with calculating wasted costs.</inlineHelpText>
        <label>Cost per Salesforce License (year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>uf__Days_to_Send_Inactivity_Notices__c</fullName>
        <inlineHelpText>Inactivity User Status records will be created after users have not logged in for the number of days selected here.  From these records, tasks/emails/workflows can be triggered to notify the user/management/fellow users.</inlineHelpText>
        <label>Days to Send Inactivity Notices</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                    <default>true</default>
                    <label>30</label>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AdoptionMax Config</label>
    <listViews>
        <fullName>uf__All</fullName>
        <columns>NAME</columns>
        <columns>uf__Cost_per_Salesforce_License__c</columns>
        <columns>uf__Days_to_Send_Inactivity_Notices__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AdoptionMax Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdoptionMax Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>